--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://lorenzo:lorenzo@cluster0.vjjcbd0.mongodb.net/test"
-NEXTAUTH_SECRET= ""
+NEXTAUTH_SECRET= "xxxxxxxxxxxxx"
