--- a/.env
+++ b/.env
@@ -4,5 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://lorenzo:lorenzo@cluster0.vjjcbd0.mongodb.net/test"
-NEXTAUTH_SECRET= "xxxxxxxxxxxxx"
+DATABASE_URL= "mongodb+srv://lorenzo:lorenzo@cluster0.vjjcbd0.mongodb.net/test"
+NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
+GITHUB_ID= cd7b155e3bf182919f2c
+GITHUB_SECRET= 18e14e97bb4258dcd5b5b0db66595ab79a1d2351
+GOOGLE_CLIENT_ID=1057867073604-tvbtquhbijmqhivts8i9398rvjhao29v.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
