--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@
 
 DATABASE_URL= "mongodb+srv://lorenzo:lorenzo@cluster0.vjjcbd0.mongodb.net/test"
 NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
-GITHUB_ID= cd7b155e3bf182919f2c
-GITHUB_SECRET= 18e14e97bb4258dcd5b5b0db66595ab79a1d2351
+GITHUB_ID=cd7b155e3bf182919f2c
+GITHUB_SECRET=18e14e97bb4258dcd5b5b0db66595ab79a1d2351
 GOOGLE_CLIENT_ID=1057867073604-tvbtquhbijmqhivts8i9398rvjhao29v.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME= "dfudb1cud"
